# goit-pythonweb-hw-12

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 3a0de2e5dd80_add_refresh_token.py  3bdecff74227_init.py  3c72c1e8c950_add_user.py  b107b0acb10c_add_to_model_user_filed_confirmed.py  c108846025e9_init_db.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_user_repository_unit.py
